Change the add-opens flag for the Axon's Java serializer